RESOLVED FIXED230138
AudioContext::getOutputTimestamp() uses incorrect global object as a high-res timestamp origin
https://bugs.webkit.org/show_bug.cgi?id=230138
Summary AudioContext::getOutputTimestamp() uses incorrect global object as a high-res...
Alexey Shvayka
Reported 2021-09-09 17:25:49 PDT
AudioContext::getOutputTimestamp() uses incorrect global object as a high-res timestamp origin
Attachments
Patch (7.65 KB, patch)
2021-09-09 17:28 PDT, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2021-09-09 17:28:58 PDT
EWS Watchlist
Comment 2 2021-09-09 17:29:50 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Radar WebKit Bug Importer
Comment 3 2021-09-16 17:26:15 PDT
Chris Dumez
Comment 4 2021-10-13 15:28:47 PDT
Comment on attachment 437812 [details] Patch r=me
Alexey Shvayka
Comment 5 2021-10-14 10:14:31 PDT
Comment on attachment 437812 [details] Patch Thanks for review!
EWS
Comment 6 2021-10-14 10:50:05 PDT
Committed r284173 (242990@main): <https://commits.webkit.org/242990@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437812 [details].
Note You need to log in before you can comment on or make changes to this bug.